Fixtures/negative/unresolved_signal.sv
module broken(input logic a, output logic y);
    assign y = missing_signal;
endmodule
